#
# Release Notes for OBS 2.0.6
#

Updaters from 2.0.X can just update the packages and restart all services.
Updaters from former releases need to check the 2.0.0 Release Notes file.

Changes since 2.0.5:
====================

Fixes:
* api: branch by specified revision is working now
* api: submit request to a project without the package, but linked project works now
* backend: dispatcher takes care of badhosts now and is not assigning the job again to the host
