@@ -231,7 +231,7 @@ class User < ActiveRecord::Base
 
     object.attrib_namespace_modifiable_bies.each do |mod_rule|
       next if mod_rule.user and mod_rule.user != self
-      next if mod_rule.group and not is_in_group(mod_rule.group)
+      next if mod_rule.group and not is_in_group? mod_rule.group
       return true
     end
 
@@ -266,7 +266,7 @@ class User < ActiveRecord::Base
     if atype.attrib_type_modifiable_bies.length > 0
       atype.attrib_type_modifiable_bies.each do |mod_rule|
         next if mod_rule.user and mod_rule.user != self
-        next if mod_rule.group and not is_in_group(mod_rule.group)
+        next if mod_rule.group and not is_in_group? mod_rule.group
         next if mod_rule.role and not has_local_role?(mod_rule.role, object)
         return true
       end
@@ -306,19 +306,19 @@ class User < ActiveRecord::Base
         logger.debug "running local role package check: user #{self.login}, project #{object.name}, role '#{role.title}'"
         rels = package_user_role_relationships.count :first, :conditions => ["db_package_id = ? and role_id = ?", object, role], :include => :role
         return true if rels > 0
-        groups.each do |g|
-          rels = package_group_role_relationships.find :all, :conditions => ["db_group_id = ? and role_id = ?", g, role], :include => :role
-          return true if rels > 0
-        end
+        rels = PackageGroupRoleRelationship.count :first, :joins => "LEFT OUTER JOIN groups_users ug ON ug.group_id = group_id", 
+                                                  :conditions => ["ug.user_id = ? and db_package_id = ? and role_id = ?", self, object, role],
+                                                  :include => :role
+         return true if rels > 0
         return has_local_role?(role, object.db_project)
       when DbProject
         logger.debug "running local role project check: user #{self.login}, project #{object.name}, role '#{role.title}'"
         rels = project_user_role_relationships.count :first, :conditions => ["db_project_id = ? and role_id = ?", object, role], :include => :role
         return true if rels > 0
-        groups.each do |g|
-          rels = project_group_role_relationships.find :all, :conditions => ["db_group_id = ? and role_id = ?", g, role], :include => :role
-          return true if rels > 0
-        end
+        rels = ProjectGroupRoleRelationship.count :first, :joins => "LEFT OUTER JOIN groups_users ug ON ug.group_id = group_id", 
+                                                  :conditions => ["ug.user_id = ? and db_project_id = ? and role_id = ?", self, object, role],
+                                                  :include => :role
+        return true if rels > 0
         return false
       end
     return false
